--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,59 @@ body {
   background-color: rgb(17, 17, 17);
   color: aliceblue;
 }
+
+.header {
+  background-color: rgb(45, 90, 173)  ;
+}
+
+.titulo {
+  font-family: Tahoma;
+  padding: 1em;
+}
+
+.inputs-configuracion {
+  display: flex;
+  padding: 1em 2em;
+  gap: 2em;
+
+  font-family: system-ui;
+  font-size: 1.1em;
+  opacity: .9;
+}
+
+.inputs-configuracion label {
+  display: flex;
+  flex-direction: column;
+  gap: .4em;
+}
+
+.inputs-configuracion select, input {
+  color: aliceblue;
+  background-color: rgb(29, 29, 29);
+  font-size: 1em;
+
+  padding: .2em .5em;
+  box-sizing: content-box;
+  height: 1.5em;
+
+  border: 1px solid rgba(240, 248, 255, 0.459);
+  border-radius: .3em;
+}
+
+.visualizador {
+  padding: 1.6em 3em;
+}
+
+.salida-codigo {
+  width: 70vw;
+  margin: 2em 3em;
+  border: 1px solid rgba(240, 248, 255, 0.493);
+  border-radius: 1em;
+  background-color: rgb(29, 29, 29);
+}
+
+.salida-codigo pre {
+  background-color: black;
+  font-size: 1.4em;
+  border-radius: 0 0 1em 1em;
+}
